gradle_run_worked